@@ -77,6 +77,7 @@ div#failed_attempts p.tableheader {
     color: #999; font-size: 90%; font-weight: bold;
     margin: 0pt; padding: 1em 5px 0;
 }
+input.delete { position:relative; right: 16px; }
 table#login_attempts { width: 480px; }
 td a img { vertical-align: middle; }
 p span.buttons input { margin-top: 0; vertical-align: baseline; }
